--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "fumadocs-core": "16.3.2",
     "fumadocs-mdx": "14.2.2",
+    "luxtable": "workspace:*",
+    "@tanstack/react-table": "^8.20.6",
     "fumadocs-ui": "16.3.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
