--- a/packages/luxtable/package.json
+++ b/packages/luxtable/package.json
@@ -52,10 +52,12 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.0",
     "tsup": "^8.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.7.0"
   }
 }
