--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "changeset": "changeset",
     "version": "changeset version",
-    "release": "pnpm build && changeset publish"
+    "release": "pnpm build && changeset publish",
+    "generate:registry": "node scripts/generate-registry.mjs"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
