--- a/packages/luxtable/package.json
+++ b/packages/luxtable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luxtable",
-  "version": "0.2.1",
+  "version": "0.3.2",
   "private": false,
   "description": "Enterprise-Grade Data Management. Minimalist Aesthetics.",
   "keywords": [
@@ -9,7 +9,10 @@
     "datagrid",
     "tanstack",
     "headless",
-    "ui"
+    "ui",
+    "shadcn",
+    "shadcn-ui",
+    "registry"
   ],
   "author": "LuxTable",
   "license": "MIT",
@@ -25,11 +28,14 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
-    }
+    },
+    "./registry/*": "./registry/*"
   },
   "files": [
     "dist",
-    "README.md"
+    "registry",
+    "README.md",
+    "EXAMPLE.md"
   ],
   "publishConfig": {
     "access": "public"
@@ -44,9 +50,15 @@
     "react-dom": ">=18"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.0.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.0.0",
+    "@radix-ui/react-label": "^2.0.0",
+    "@radix-ui/react-popover": "^1.0.0",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-table": "^8.0.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.562.0",
     "tailwind-merge": "^2.0.0"
